--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -16,6 +16,9 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    
+    permissions: 
+       checks: write
 
     steps:
     - uses: actions/checkout@v4
